--- a/dash-rohini/dash.html
+++ b/dash-rohini/dash.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0087)https://apps.dashplatform.com/beta/dash/index.php?action=Home/index&company=arenasports -->
-<html lang="en" data-original-title="" title="" class="gr__apps_dashplatform_com"><script type="text/javascript" src="./dash_files/fceb57b065"></script><script src="./dash_files/nr-1016.min.js"></script><script id="facebook-jssdk" src="./dash_files/sdk.js"></script><script async="" src="./dash_files/analytics.js"></script><script id="tinyhippos-injected" data-original-title="" title="">if (window.top.ripple) { window.top.ripple("bootstrap").inject(window, document); }</script><head data-original-title="" title=""><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en" data-original-title="" title="" class="gr__apps_dashplatform_com"><script type="text/javascript" src="./dash_files/fceb57b065"></script><script src="./dash_files/nr-1016.min.js"></script><script id="facebook-jssdk" src="./dash_files/sdk.js"></script><script async="" src="./dash_files/analytics.js"></script><script id="tinyhippos-injected" data-original-title="" title="">if (window.top.ripple) { window.top.ripple("bootstrap").inject(window, document); }</script>
+<head data-original-title="" title=""><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       
       
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" data-original-title="" title="">
@@ -21,244 +22,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<style type="text/css">
-	.navbar-inverse .navbar-nav>li>a {
-	    color: #f5f5f5;
-	}
+<link rel="stylesheet" href="myStyles.css">
 
-	.navbar-inverse .navbar-nav>li>a:hover {
-	    color: #ccc;
-	}
-
-	.side-header-left #side-header .fusion-main-menu > ul > li > a {
-	    border-left-width: 0;
-	}
-
-	#side-header .fusion-main-menu > ul > li > a {
-	    padding-left: 25px;
-	    padding-right: 5px;
-	    border-top-color: #d2d3d4;
-	    border-bottom-color: #d2d3d4;
-	    text-align: left;
-	    height: auto;
-	    min-height: 40px;
-	}
-
-	#side-header .fusion-main-menu > ul > li > a {
-	    border-top-width: 0px;
-	    border-bottom-width: 1px;
-	    border-right: 0;
-	    border-left: 0;
-	    border-style: solid;
-	}
-
-	#side-header .fusion-main-menu > ul > li > a:hover {
-	    color:white;
-	    background-color: #006eb6;
-	    text-decoration: none;
-	}
-	.fusion-main-menu > ul > li > a {
-	    color: #828282;
-	}
-
-	.fusion-main-menu > ul > li > a, .side-nav li a {
-	    font-size: 16px;
-	    font-weight: 400;
-	    letter-spacing: 0px;
-	}
-
-	.fusion-main-menu a {
-	    display: block;
-	    box-sizing: content-box;
-	}
-
-	a {
-	    text-decoration: none;
-	    color: #333;
-	}
-
-	.fusion-main-menu > ul > li > a {
-	    border-top: 3px solid transparent;
-	    height: 40px;
-	    line-height: 40px;
-	}
-
-	.fusion-main-menu ul {
-	    list-style: none;
-	    margin: 0;
-	    padding: 0;
-	}
-
-	.side-header-left #side-header .fusion-main-menu > ul > li.current-menu-item > a {
-	    border-right-width: 3px;
-	}
-
-	/*!
- * Start Bootstrap - Simple Sidebar (http://startbootstrap.com/)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
-
- body {
-    overflow-x: hidden;
- }
-
-/* Toggle Styles */
-
-#wrapper {
-    padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-#wrapper.toggled {
-    padding-left: 250px;
-}
-
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    left: 250px;
-    width: 0;
-    height: 100%;
-    margin-left: -250px;
-    overflow-y: auto;
-    background: white;
-    border-right: 1px solid #ccc;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-#wrapper.toggled #sidebar-wrapper {
-    width: 250px;
-}
-
-#page-content-wrapper {
-    width: 100%;
-    padding: 15px;
-}
-
-.box-content-wrapper p:first-child{
-	height: 50px; 
-	width: 100%; 
-	display: block;
-	background-color: #428CCA;
-}
-
-.box-content-wrapper h4{
-	margin-top: -45px; 
-	color: white; 
-	margin-left: 15px;
-}
-
-.caption div{
-	margin-left:55%;margin-top:-7%;text-align: center;
-}
-
-#wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
-    border-left: 1px solid black;
-}
-
-/* Sidebar Styles */
-
-.sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-
-}
-
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
-}
-
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #999999;
-    padding-left: 25px;
-	padding-right: 5px;
-	border-top-color: #d2d3d4;
-	border-bottom-color: #d2d3d4;
-	text-align: left;
-	height: auto;
-	min-height: 40px;
-	border-top-width: 0px;
-	border-bottom-width: 1px;
-	border-right: 0;
-	border-left: 0;
-	border-style: solid;
-}
-
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    color:white;
-	background-color: #006eb6;
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
-}
-
-.sidebar-nav li:nth-child(2){
-	border-right: 5px solid #428CCA;
-	border-top: 1px solid #ccc;
-	font-weight: bold;
-
-}
-
-
-.sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
-}
-
-.sidebar-nav > .sidebar-brand a {
-    color: #999999;
-}
-
-
-@media(min-width:768px) {
-    #wrapper {
-        padding-left: 250px;
-    }
-
-    #wrapper.toggled {
-        padding-left: 0;
-    }
-
-    #sidebar-wrapper {
-        width: 250px;
-    }
-
-    #wrapper.toggled #sidebar-wrapper {
-        width: 0;
-    }
-
-    #page-content-wrapper {
-        padding: 20px;
-        position: relative;
-    }
-
-    #wrapper.toggled #page-content-wrapper {
-        position: relative;
-        margin-right: 0;
-    }
-}
-</style>
-   </head>
+</head>
 
 
   <body>
